# stimulate

./: .gitignore  CMakeLists.txt  main.cpp
BCIIA/: CMakeLists.txt
BCIIA/DataOperation/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
BCIIA/DataOperation/Amplifier/: CMakeLists.txt
BCIIA/DataOperation/Amplifier/filter/: CMakeLists.txt
BCIIA/DataOperation/Amplifier/filter/src/: filter.cpp  filter.h  iirfilter.cpp  iirfilter.h
BCIIA/DataOperation/Amplifier/res/: amplifier.qrc
BCIIA/DataOperation/Amplifier/src/: amplifier.cpp  amplifier.h  amplifierdevice.h  datathread.cpp  datathread.h  pluginmanage.cpp  pluginmanage.h  pluginwidget.cpp  pluginwidget.h  pluginwidget.ui
BCIIA/DataOperation/Amplifier/test/: CMakeLists.txt  main.cpp
BCIIA/DataOperation/FileStorage/: CMakeLists.txt
BCIIA/DataOperation/FileStorage/MAT/: CMakeLists.txt
BCIIA/DataOperation/FileStorage/MAT/matio/x64/debug/include/: matio_pubconf.h
BCIIA/DataOperation/FileStorage/MAT/matio/x64/debug/lib/: libmatio.lib
BCIIA/DataOperation/FileStorage/MAT/matio/x64/release/lib/: libmatio.lib
BCIIA/DataOperation/FileStorage/MAT/src/: mat.cpp  mat.h
BCIIA/DataOperation/FileStorage/MAT/test/: main.cpp
BCIIA/DataOperation/FileStorage/src/: filestorage.cpp  filestorage.h  matstorage.cpp  matstorage.h  storage.cpp  storage.h  storageconfig.cpp  storageconfig.h  storageconfigwidget.cpp  storageconfigwidget.h  storageconfigwidget.ui  storagedata.cpp  storagedata.h
BCIIA/DataOperation/FileStorage/test/: main.cpp
BCIIA/DataOperation/src/: datainfo.cpp  datainfo.h  dataoperation.cpp  dataoperation.h
BCIIA/UI/: CMakeLists.txt
BCIIA/UI/curvegroup/CurveWnd/: CMakeLists.txt
BCIIA/UI/curvegroup/CurveWnd/maxwidget/: CMakeLists.txt
BCIIA/UI/curvegroup/CurveWnd/maxwidget/CurveProperty/src/: curveconfig.cpp
BCIIA/UI/curvegroup/CurveWnd/maxwidget/src/: maxwidget.cpp  maxwidget.h  qcustomplot.cpp  qcustomplot.h
BCIIA/UI/curvegroup/CurveWnd/src/: curvewnd.cpp  curvewnd.h  mark.cpp  mark.h  seriesdata.cpp  seriesdata.h
BCIIA/UI/curvegroup/CurveWnd/temp/: mark.cpp  mark.h  series.cpp  series.h
BCIIA/UI/curvegroup/CurveWnd/test/: lib_test.cpp
BCIIA/UI/curvegroup/src/: curveconfigwidget.cpp  curveconfigwidget.h  curveconfigwidget.ui  curvegroup.cpp  curvegroup.h  curvegroupconfig.cpp  curvegroupconfig.h  datadown.cpp  datadown.h
BCIIA/UI/res/: res.qrc
BCIIA/UI/src/: bcimonitor.cpp  bcimonitor.h  monitortoolbar.cpp  monitortoolbar.h
BCIIA/UI/test/: main.cpp
BCIIA/src/: bciia.cpp  bciia.h
BCIIA/test/: main.cpp
LocalAmplifer/SelfAmplifer/: CMakeLists.txt  CMakeLists.txt.user.386d584  CMakeUserPresets.json
LocalAmplifer/SelfAmplifer/src/: amplifierdevice.h  communication.h  communicationmanage.h  connectwidget.cpp  connectwidget.h  connectwidget.ui  eegdata.cpp  matread.cpp  matread.h  parse.cpp  parse.h  protocols.h  selfamplifer.cpp  selfamplifer.h  selfamplifer.json
LocalAmplifer/SelfAmplifer/src/Communication/: tcpcommunication.cpp  tcpcommunication.h  tcpconnectwidget.cpp  tcpconnectwidget.h  tcpconnectwidget.ui
LocalAmplifer/SelfAmplifer/src/Protocols/: protocolsa.cpp  protocolsa.h
LocalAmplifer/SelfAmplifer/test/: CMakeLists.txt  main.cpp
LocalAmplifer/SelfAmplifer/test/src/: iirfilter.cpp  testwidget.cpp
SelfAmplifer/: CMakeLists.txt
SelfAmplifer/src/: MainWindow.cpp  MainWindow.h  communication.h  communicationmanage.cpp  eegdata.cpp  eegdata.h  mainwindow.ui  parse.cpp  selfamplifer.cpp  selfamplifer.h  selfamplifer.json
SelfAmplifer/src/Bluetooth/: BluetoothDeviceController.cpp  BluetoothDeviceController.h  DataParser.cpp  DataParser.h
SelfAmplifer/src/Communication/: tcpcommunication.cpp  tcpcommunication.h  tcpconnectwidget.cpp  tcpconnectwidget.h  tcpconnectwidget.ui
SelfAmplifer/src/Protocols/: protocolsa.cpp  protocolsa.h  protocolsb.cpp  protocolsb.h  sm4.c  sms4.c  sms4.h
SelfAmplifer/test/: CMakeLists.txt  main.cpp
SelfAmplifer/test/src/: iirfilter.cpp  testwidget.ui
res/: res.qrc
src/: alphadetector.cpp  alphadetector.h  indexwidget.cpp  indexwidget.h  indexwidget.ui  platformwidget.cpp  platformwidget.h  platformwidget.ui  protocolsender.cpp  protocolsender.h
